--- a/Core.v3.css
+++ b/Core.v3.css
@@ -1,5 +1,5 @@
 /* حاوية المنشورات */
-.product-grid {
+.edu-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   gap: 25px;
